--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "sample-app",
+    "name": "Booking-App",
     "slug": "sample-app",
     "version": "1.0.0",
     "orientation": "portrait",
