--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "6.7.2",
     "@react-navigation/native": "6.1.18",
@@ -24,16 +26,21 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "2.20.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-wheel-pick": "^1.2.4",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/react": "18.3.12",
-    "typescript": "5.3.3",
-    "@react-native-community/cli": "latest"
+    "typescript": "5.3.3"
   },
   "private": true
 }
