--- a/package.json
+++ b/package.json
@@ -25,8 +25,15 @@
     "@react-navigation/native": "6.1.18",
     "@react-navigation/native-stack": "6.11.0",
     "expo": "52.0.38",
+    "expo-auth-session": "6.0.3",
+    "expo-constants": "17.0.8",
+    "expo-firebase-recaptcha": "2.3.1",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "^12.3.0",
     "expo-status-bar": "2.0.1",
+    "expo-web-browser": "14.0.2",
+    "firebase": "11.4.0",
+    "libphonenumber-js": "^1.12.6",
     "lodash": "^4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -36,13 +43,15 @@
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.12.5",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.4.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-wheel-pick": "^1.2.4"
+    "react-native-wheel-pick": "^1.2.4",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
